# LangGraphResearchAssistant

./: .env.example  .gitignore  Dockerfile  LANGGRAPH_GUIDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ClarificationModal.tsx  Sidebar.tsx  StatusBar.tsx  WelcomeScreen.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: __init__.py
src/research_assistant/: __init__.py  api.py  app.py  config.py  graph.py  guardrails.py  main.py  state.py
src/research_assistant/agents/: __init__.py  base.py  clarity_agent.py  research_agent.py  schemas.py  synthesis_agent.py  thinksemantic_intent_agent.py  ultrathink_intent_agent.py  validator_agent.py
src/research_assistant/routing/: __init__.py  conditions.py
src/research_assistant/tools/: __init__.py  mock_data.py  research_tool.py
src/research_assistant/utils/: __init__.py  cache.py  confidence.py  export.py  grounding.py  intent.py  logging.py  persistence.py  retry_tracker.py
static/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_clarity_agent.py  test_confidence.py  test_enhanced_system.py  test_export.py  test_graph_flow.py  test_grounding.py  test_intent.py  test_mock_data.py  test_research_agent.py  test_routing.py  test_state.py  test_synthesis_agent.py  test_tools.py  test_validator_agent.py
